# imagetext-py

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  pyproject.toml  readme.md  test.py
.github/workflows/: CI.yml
imagetext_py/: __init__.py  imagetext_py.pyi  lib.py
src/: canvas.rs  drawing.rs  font.rs  lib.rs  objects.rs  paint.rs  utils.rs
typerighter/: __init__.py  lib.py  typerighter.pyi
typewriter/: __init__.py  typewriter.pyi
