[package]
name = "imagetext_py"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagetext_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
imagetext = { path = "./imagetext", features = ["emoji", "default-resolver", "fontdb", "crosscompile"]}
image = "0.24.5"