[package]
name = "imagetext_py"
authors = ["Nathaniel Fernandes"]
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagetext_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
imagetext = { path = "./imagetext", features = [
    "emoji",
    "default-resolver",
    "fontdb",
    "vendored-openssl",
] }
image = "0.24.7"
