[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "imagetext_py"
description = "Python bindings for imagetext"
version = "2.1.4"
authors = [
    { name = "Nathaniel Fernandes", email = "nathaniel.s.fernandes@gmail.com" },
]
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/nathanielfernandes/imagetext-py"
